--- a/src/ui/common/layout/CenterLayout.pug
+++ b/src/ui/common/layout/CenterLayout.pug
@@ -11,5 +11,5 @@ style.
 		height 100dvh
 		overflow auto
 		padding 40px
-		scrollbar-gutter stable
+		scrollbar-gutter stable both-edges
 		width 100dvw
