--- a/src/ui/feature/subreddit/SubredditAvatar.pug
+++ b/src/ui/feature/subreddit/SubredditAvatar.pug
@@ -23,10 +23,10 @@ style.
 		user-select none
 	.subreddit-avatar-image
 		aspect-ratio 1
-		border 1px solid
 		border-radius 50%
+		object-fit cover
 	.subreddit-avatar-image-not-available
-		background var(--c-text-weak)
+		background var(--c-text-strong)
 	.subreddit-avatar-image-size-large
 		height 64px
 	.subreddit-avatar-image-size-medium
