--- a/src/ui/feature/user/UserCommentsList.pug
+++ b/src/ui/feature/user/UserCommentsList.pug
@@ -39,7 +39,9 @@ style.
 		gap 30px
 		grid-template-columns 128px 1fr
 	.user-comment-list
-		list-style none
+		display flex
+		flex-flow column nowrap
+		gap 0.5em
 		padding 30px 0
 	.user-name
 		font-size 12pt
@@ -47,8 +49,6 @@ style.
 		display flex
 		flex-flow row wrap
 		gap 5px
-		list-style none
-		padding 0
 	.user-trophy
 		height 41px
 		width 41px
