--- a/src/ui/feature/subreddit/SubredditInfo.pug
+++ b/src/ui/feature/subreddit/SubredditInfo.pug
@@ -14,10 +14,10 @@ script.
 
 {#if info}
 	.subreddit-info
-		{#if info.banner_background_image}
+		{#if info.banner_background_image || info.banner_img}
 			p
-				a(href={info.banner_background_image})
-					img.subreddit-info-banner-image(alt='' src={info.banner_background_image})
+				a(href={info.banner_background_image || info.banner_img})
+					img.subreddit-info-banner-image(alt='' src={info.banner_background_image || info.banner_img})
 		table.subreddit-info-stats
 			thead
 				tr
@@ -41,9 +41,7 @@ style.
 		padding 10px 0
 		justify-content flex-end
 	.subreddit-info-banner-image
-		aspect-ratio 8
 		border-radius 10px
-		object-fit cover
 	.subreddit-info-stats
 		margin-bottom 10px
 		width 100%
