--- a/src/ui/feature/subreddit/SubredditWidget.pug
+++ b/src/ui/feature/subreddit/SubredditWidget.pug
@@ -1,4 +1,6 @@
 script.
+	import { relativize_url } from '../../app/routing/AppURL.coffee'
+
 	import Button from '../../common/Button.pug'
 	import TextHTML from '../../common/TextHTML.pug'
 
@@ -12,7 +14,7 @@ script.
 		header.subreddit-widget-title {widget.shortName}
 		ol.subreddit-widget-links
 			{#each widget.buttons as button}
-				Button(link={button.url} text={button.text})
+				Button(link={relativize_url(button.url)} text={button.text})
 	{:else if widget.kind === 'community-list'}
 		header.subreddit-widget-title {widget.shortName}
 		ol.subreddit-widget-related-subreddits
@@ -21,10 +23,10 @@ script.
 	{:else if widget.kind === 'image'}
 		{@const image = widget.data[0]}
 			{#if image.linkUrl}
-				a(href={image.linkUrl})
+				a(href={relativize_url(image.linkUrl)})
 					img.subreddit-widget-image(alt={widget.shortName} src={image.url} style='aspect-ratio: {image.width}/{image.height}')
 			{:else}
-				figure
+				a(href={image.url})
 					img.subreddit-widget-image(alt={widget.shortName} src={image.url} style='aspect-ratio: {image.width}/{image.height}')
 	{:else if widget.kind === 'post-flair'}
 		header.subreddit-widget-title Filter by Flair
@@ -37,23 +39,18 @@ script.
 		TextHTML(html={widget.textHtml})
 
 style.
-	.subreddit-widget
-		width 320px
 	.subreddit-widget-links
 		display flex
 		flex-flow row wrap
 		gap 10px
-		padding 0
 	.subreddit-widget-post-flairs
 		display flex
 		flex-flow row wrap
 		gap 10px
-		padding 0
 	.subreddit-widget-related-subreddits
 		display flex
 		flex-flow column nowrap
 		gap 10px
-		padding 0
 	.subreddit-widget-title
 		font-weight 900
 		margin-bottom 1em
